# Varg-Agent

./: .gitignore  README.md
agent/: Dockerfile  agent.varg  bot.py  requirements.txt
config/: agent.env.example  system_prompt.txt
deploy/: .env.example  docker-compose.dev.yml  docker-compose.yml  setup.sh
deploy/agent/: Dockerfile
deploy/caddy/: Caddyfile
deploy/conduit/: conduit.toml
deploy/element/: config.json
sandbox/: Dockerfile  app.py
src/: chat_agent.varg  conversation.varg  knowledge.varg  llm_provider.varg  main.varg  matrix_client.varg
src/tools/: code_tools.varg  file_tools.varg  knowledge_tools.varg  tool_registry.varg
stt/: Cargo.toml  Dockerfile  app.py
stt/src/: main.rs
tests/: test_conversation.varg  test_knowledge.varg  test_llm_provider.varg  test_matrix_client.varg  test_tools.varg
