[package]
name = "varg-media"
version = "0.2.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
printpdf = "0.7"
scraper = "0.22"
regex = "1"

[profile.release]
opt-level = "s"
lto = true
strip = true
